[package]
name = "timerfd"
description = "A rust interface to the Linux kernel's timerfd API"
repository = "https://github.com/main--/rust-timerfd"
documentation = "https://docs.rs/timerfd/"
license = "MIT"
version = "1.3.0"
authors = ["main() <main@ehvag.de>"]

[dependencies]
rustix = { version = "0.36.0", features = ["time"] }
